syntax = "proto3";
package stratos.evm.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";
import "stratos/evm/v1/evm.proto";

option (gogoproto.equal_all) = true;
option go_package = "github.com/stratosnet/stratos-chain/x/evm/types";

// GenesisState defines the evm module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (gogoproto.jsontag) = "params",
    (gogoproto.moretags) = "yaml:\"params\""
  ];

  // accounts is an array containing the ethereum genesis accounts.
  repeated GenesisAccount accounts = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (gogoproto.jsontag) = "accounts",
    (gogoproto.moretags) = "yaml:\"accounts\""
  ];

  /*---------------------------fee market start----------------------------------------*/
  // block gas is the amount of gas used on the last block before the upgrade.
  // Zero by default.
  uint64 block_gas = 3 [
    (amino.dont_omitempty) = true,
    (gogoproto.jsontag) = "block_gas",
    (gogoproto.moretags) = "yaml:\"block_gas\""
  ];
}

// GenesisAccount defines an account to be initialized in the genesis state.
// Its main difference between with Geth's GenesisAccount is that it uses a
// custom storage type and that it doesn't contain the private key field.
message GenesisAccount {
  // address defines an ethereum hex formated address of an account
  string address = 1 [
    (gogoproto.jsontag) = "address",
    (gogoproto.moretags) = "yaml:\"address\""
  ];
  // code defines the hex bytes of the account code.
  string code = 2 [
    (gogoproto.jsontag) = "code",
    (gogoproto.moretags) = "yaml:\"code\""
  ];
  // storage defines the set of state key values for the account.
  repeated State storage = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "Storage",
    (gogoproto.jsontag) = "storage",
    (gogoproto.moretags) = "yaml:\"storage\""
  ];
}
